--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,16 +9,16 @@
 #   Latest themes (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
-theme = "minimal"
+theme = "Minimal"
 
 # Enable users to switch between day and night mode?
-day_night = true
+day_night = false
 
 # Override the theme's font set (optional).
 #   Latest font sets (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in font sets in `themes/academic/data/fonts/`
 #   Browse user installed font sets in `data/fonts/`
-font = ""
+font = "minimal"
 
 # Choose a font size.
 # Sizes: XS (extra small), S (small), M (medium), L (large - DEFAULT), XL (extra large)
@@ -44,7 +44,7 @@ local_business_type = ""
 org_name = ""
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "First Year PhD Student in Statistics"
+description = "PhD candidate in Materials Science and Engineering at the University of Florida"
 
 # Display a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
@@ -85,12 +85,12 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "kempfert@berkeley.edu"
+email = "darshan.bamney@ufl.edu"
 phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "343 Evans Hall, Department of Statistics, University of California Berkeley", city = "Berkeley", region = "CA", postcode = "94720", country = "United States", country_code = "US"}
+address = {street = "1064 Center Dr., New Engineering Building (NEB) - 257, University of Florida", city = "Gainesville", region = "FL", postcode = "32611", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
@@ -113,7 +113,7 @@ contact_links = [
 #  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-#   {icon = "google-scholar", icon_pack = "ai", link = "https://scholar.google.com/citations?user=7iF-KPQAAAAJ&hl=en&oi=ao"},
+   {icon = "google-scholar", icon_pack = "ai", name = "Visit on Google Scholar", link = "https://scholar.google.com/citations?user=LQw5w-UAAAAJ&hl=en&oi=ao"},
   ]
 
 ############################
@@ -261,5 +261,5 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-155088352-1"
   google_tag_manager = ""
