--- a/themes/academic/data/themes/minimal.toml
+++ b/themes/academic/data/themes/minimal.toml
@@ -5,14 +5,14 @@ name = "Minimal"
 light = true
 
 # Primary
-primary = "#2962ff"
+primary = "#9f00ff"
 
 # Menu
 menu_primary = "#fff"
-menu_text = "#34495e"
-menu_text_active = "#2962ff"
-menu_title = "#2b2b2b"
+menu_text = "#000000"
+menu_text_active = "#7d00ff"
+menu_title = "#000000"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "rgb(228, 234, 255)"
+home_section_even = "rgb(200, 212, 255)"
