--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,19 @@
 #  weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "Research"
   url = "#projects"
   weight = 30
+  
+ [[main]]
+  name = "Teaching"
+  url = "#projects2"
+  weight = 40
 
 [[main]]
   name = "Publications"
   url = "#publications"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Contact"
@@ -31,7 +36,7 @@
 [[main]]
 	name = "CV"
 	url = "#CV"
-	weight = 30
+	weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
