--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,28 +15,28 @@
 
 [[main]]
   name = "Research"
-  url = "#projects"
-  weight = 30
+  url = "#research"
+  weight = 20
   
  [[main]]
   name = "Teaching"
-  url = "#projects2"
-  weight = 40
+  url = "#teaching"
+  weight = 30
 
 [[main]]
   name = "Publications"
   url = "#publications"
-  weight = 50
+  weight = 40
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 50
 
 [[main]]
 	name = "CV"
 	url = "#CV"
-	weight = 70
+	weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
